<resources>
    <string name="app_name">Audio Memoir NFC Utility</string>

    <string name="login_desc_user">User</string>
    <string name="login_desc_pass">Password</string>
    <string name="login_et_hint_user">Username</string>
    <string name="login_et_hint_password">Password</string>

    <string name="title_activity_login">Sign in</string>
    <string name="username_activity_login">Username</string>
    <string name="password_activity_login">Password</string>
    <string name="collection_id_activity_login">Collection ID</string>
    <string name="enter_activity_login">Enter</string>
    <string name="remember_me_activity_login">Remember Me</string>
    <string name="emptyfiled_activity_login">Field is empty</string>

    <string name="err_name_first_activity_nfc">Enter name first</string>
    <string name="write_to_tag_activity_nfc">Write to tag</string>
    <string name="artifact_name_activity_nfc">Artifact name</string>
    <string name="insert_artifact_name_activity_nfc">Insert artifact name</string>

    <string name="approach_nfc_tag_activity_nfc_write">Approach an NFC Tag</string>
    <string name="cancel_activity_nfc_write">Cancel</string>
</resources>
